pull from master (#2)
* 8305858: Resolve multiple definition of 'handleSocketError' when statically linking with JDK native libraries

Reviewed-by: alanb

* 8303923: ZipOutStream::putEntry should include an apiNote to indicate that the STORED compression method  should be used when writing directory entries

Reviewed-by: lancea, alanb

* 8305529: DefaultProxySelector.select(URI) in certain cases returns a List with null element

Reviewed-by: dfuchs, djelinski, michaelm

* 8304450: [vectorapi] Refactor VectorShuffle implementation

Reviewed-by: psandoz, xgong, jbhateja, vlivanov

* 8305414: gtest/NMTGtests.java is failing various sub-tests

Reviewed-by: rkennke, adinn

* 8305900: Use loopback IP addresses in security policy files of httpclient tests

Reviewed-by: dfuchs

* 8305688: jdk build --with-memory-size=1024 broken by JDK-8305100

Reviewed-by: martin

* 8304350: Font.getStringBounds calculates wrong width for TextAttribute.TRACKING other than 0.0

Reviewed-by: stuefe

* 8296420: javac has long lines in its command-line help

Reviewed-by: jjg

* 8305712: [MacOS] Deprecated Cocoa-NSEvent names

Reviewed-by: dmarkov, prr

* 8305847: Improve diagnosability and resilience of HttpClient::close tests

Reviewed-by: jpai, djelinski

* 8305966: ProblemList com/sun/jdi/JdbLastErrorTest.java on windows-x64

Reviewed-by: alanb

* 8305937: com/sun/jdi/SetLocalWhileThreadInNative.java fails with -XX:+TieredCompilation

Reviewed-by: dcubed

* 8305875: Test TraceVirtualThreadLocals should be run with continuations only

Reviewed-by: alanb

* 8305794: Unused interface sun.security.util.PermissionFactory can be removed

Co-authored-by: Andrey Turbanov <aturbanov@openjdk.org>
Reviewed-by: mullan, aturbanov

* 8255548: Missing coverage for javax.xml.crypto.dom.DOMCryptoContext

Reviewed-by: rhalade, mullan

* 8305936: JavaThread::create_system_thread_object has unused is_visible argument

Reviewed-by: alanb, kbarre