@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,54 +27,102 @@ package jdk.internal.foreign.abi;
 import jdk.internal.foreign.SystemLookup;
 import jdk.internal.foreign.abi.aarch64.linux.LinuxAArch64Linker;
 import jdk.internal.foreign.abi.aarch64.macos.MacOsAArch64Linker;
+import jdk.internal.foreign.abi.aarch64.windows.WindowsAArch64Linker;
+import jdk.internal.foreign.abi.fallback.FallbackLinker;
+import jdk.internal.foreign.abi.riscv64.linux.LinuxRISCV64Linker;
 import jdk.internal.foreign.abi.x64.sysv.SysVx64Linker;
 import jdk.internal.foreign.abi.x64.windows.Windowsx64Linker;
+import jdk.internal.foreign.layout.AbstractLayout;
 
+import java.lang.foreign.GroupLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.Linker;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SequenceLayout;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
 import java.util.Objects;
 
 public abstract sealed class AbstractLinker implements Linker permits LinuxAArch64Linker, MacOsAArch64Linker,
-                                                                      SysVx64Linker, Windowsx64Linker {
+                                                                      SysVx64Linker, WindowsAArch64Linker,
+                                                                      Windowsx64Linker, LinuxRISCV64Linker,
+                                                                      FallbackLinker {
 
-    private final SoftReferenceCache<FunctionDescriptor, MethodHandle> DOWNCALL_CACHE = new SoftReferenceCache<>();
+    public interface UpcallStubFactory {
+        MemorySegment makeStub(MethodHandle target, Arena arena);
+    }
+
+    private record LinkRequest(FunctionDescriptor descriptor, LinkerOptions options) {}
+    private final SoftReferenceCache<LinkRequest, MethodHandle> DOWNCALL_CACHE = new SoftReferenceCache<>();
+    private final SoftReferenceCache<LinkRequest, UpcallStubFactory> UPCALL_CACHE = new SoftReferenceCache<>();
 
     @Override
-    public MethodHandle downcallHandle(FunctionDescriptor function) {
+    public MethodHandle downcallHandle(FunctionDescriptor function, Option... options) {
         Objects.requireNonNull(function);
+        Objects.requireNonNull(options);
+        checkHasNaturalAlignment(function);
+        LinkerOptions optionSet = LinkerOptions.forDowncall(function, options);
 
-        return DOWNCALL_CACHE.get(function, fd -> {
-            MethodType type = SharedUtils.inferMethodType(fd, false);
-            MethodHandle handle = arrangeDowncall(type, fd);
-            handle = SharedUtils.maybeInsertAllocator(handle);
+        return DOWNCALL_CACHE.get(new LinkRequest(function, optionSet), linkRequest ->  {
+            FunctionDescriptor fd = linkRequest.descriptor();
+            MethodType type = fd.toMethodType();
+            MethodHandle handle = arrangeDowncall(type, fd, linkRequest.options());
+            handle = SharedUtils.maybeInsertAllocator(fd, handle);
             return handle;
         });
     }
-    protected abstract MethodHandle arrangeDowncall(MethodType inferredMethodType, FunctionDescriptor function);
+    protected abstract MethodHandle arrangeDowncall(MethodType inferredMethodType, FunctionDescriptor function, LinkerOptions options);
 
     @Override
-    public MemorySegment upcallStub(MethodHandle target, FunctionDescriptor function, MemorySession scope) {
-        Objects.requireNonNull(scope);
+    public MemorySegment upcallStub(MethodHandle target, FunctionDescriptor function, Arena arena, Linker.Option... options) {
+        Objects.requireNonNull(arena);
         Objects.requireNonNull(target);
         Objects.requireNonNull(function);
+        checkHasNaturalAlignment(function);
         SharedUtils.checkExceptions(target);
+        LinkerOptions optionSet = LinkerOptions.forUpcall(function, options);
 
-        MethodType type = SharedUtils.inferMethodType(function, true);
+        MethodType type = function.toMethodType();
         if (!type.equals(target.type())) {
             throw new IllegalArgumentException("Wrong method handle type: " + target.type());
         }
-        return arrangeUpcall(target, target.type(), function, scope);
+
+        UpcallStubFactory factory = UPCALL_CACHE.get(new LinkRequest(function, optionSet), linkRequest ->
+            arrangeUpcall(type, linkRequest.descriptor(), linkRequest.options()));
+        return factory.makeStub(target, arena);
     }
 
-    protected abstract MemorySegment arrangeUpcall(MethodHandle target, MethodType targetType,
-                                                   FunctionDescriptor function, MemorySession scope);
+    protected abstract UpcallStubFactory arrangeUpcall(MethodType targetType, FunctionDescriptor function, LinkerOptions options);
 
     @Override
     public SystemLookup defaultLookup() {
         return SystemLookup.getInstance();
+    }
+
+    // Current limitation of the implementation:
+    // We don't support packed structs on some platforms,
+    // so reject them here explicitly
+    private static void checkHasNaturalAlignment(FunctionDescriptor descriptor) {
+        descriptor.returnLayout().ifPresent(AbstractLinker::checkHasNaturalAlignmentRecursive);
+        descriptor.argumentLayouts().forEach(AbstractLinker::checkHasNaturalAlignmentRecursive);
+    }
+
+    private static void checkHasNaturalAlignmentRecursive(MemoryLayout layout) {
+        checkHasNaturalAlignment(layout);
+        if (layout instanceof GroupLayout gl) {
+            for (MemoryLayout member : gl.memberLayouts()) {
+                checkHasNaturalAlignmentRecursive(member);
+            }
+        } else if (layout instanceof SequenceLayout sl) {
+            checkHasNaturalAlignmentRecursive(sl.elementLayout());
+        }
+    }
+
+    private static void checkHasNaturalAlignment(MemoryLayout layout) {
+        if (!((AbstractLayout<?>) layout).hasNaturalAlignment()) {
+            throw new IllegalArgumentException("Layout bit alignment must be natural alignment: " + layout);
+        }
     }
 }
